[gd_scene load_steps=10 format=3 uid="uid://dukgxpuw3y4w7"]

[ext_resource type="Texture2D" uid="uid://cwonmxgbjtq0k" path="res://assets/field/2019-DeepSpace/materials/blueAutoSelector.png" id="1_0l8qo"]
[ext_resource type="Script" uid="uid://dfhg0hdmicudd" path="res://assets/field/2019-DeepSpace/guiStuff/auto_selection_screen.gd" id="1_83sgf"]
[ext_resource type="ButtonGroup" uid="uid://biqu4p2wgfatl" path="res://assets/field/2019-DeepSpace/guiStuff/bay1button.tres" id="1_xekk7"]
[ext_resource type="ButtonGroup" uid="uid://ujct6iewc56g" path="res://assets/field/2019-DeepSpace/guiStuff/aliianceButton.tres" id="2_0glru"]
[ext_resource type="Texture2D" uid="uid://dcvu1eebqppnt" path="res://assets/field/2019-DeepSpace/materials/hatchPannel.png" id="2_5jar2"]
[ext_resource type="ButtonGroup" uid="uid://cp7c2rnwe7euh" path="res://assets/field/2019-DeepSpace/guiStuff/bay2button.tres" id="2_83sgf"]
[ext_resource type="ButtonGroup" uid="uid://bul4ni0t1864j" path="res://assets/field/2019-DeepSpace/guiStuff/preloadGroup.tres" id="2_ltudo"]
[ext_resource type="ButtonGroup" uid="uid://c1ake41vwbiql" path="res://assets/field/2019-DeepSpace/guiStuff/bay3button.tres" id="3_1uoyi"]
[ext_resource type="Texture2D" uid="uid://ctxwrj3y58vg" path="res://assets/field/2019-DeepSpace/guiStuff/madtownLogo.svg" id="7_1uoyi"]

[node name="AutoSelectionScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_83sgf")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HSeparator7" type="HSeparator" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Alliance Label" type="Label" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Alliance Color"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Blue" type="CheckButton" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
button_pressed = true
button_group = ExtResource("2_0glru")
text = "Blue"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Red" type="CheckButton" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
button_group = ExtResource("2_0glru")
text = "Red"

[node name="HSeparator6" type="HSeparator" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StartingLabel" type="Label" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Starting Location"
horizontal_alignment = 1

[node name="StartingOptions" type="OptionButton" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
selected = 1
item_count = 5
popup/item_0/text = "Level 1 Left"
popup/item_0/id = 0
popup/item_1/text = "Level 1 Center"
popup/item_1/id = 1
popup/item_2/text = "Level 1 Right"
popup/item_2/id = 2
popup/item_3/text = "Level 2 Left (+3)"
popup/item_3/id = 3
popup/item_4/text = "Level 2 Right (+3)"
popup/item_4/id = 4

[node name="HSeparator5" type="HSeparator" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PreloadLabel" type="Label" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Preload"
horizontal_alignment = 1

[node name="PreloadButtons" type="HBoxContainer" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Hatch" type="CheckButton" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PreloadButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
button_pressed = true
button_group = ExtResource("2_ltudo")
text = "Hatch Pannel"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PreloadButtons"]
layout_mode = 2

[node name="Cargo" type="CheckButton" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PreloadButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
button_group = ExtResource("2_ltudo")
text = "Cargo"

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="bay1Label" type="Label" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Bay 1 Contents"
horizontal_alignment = 1

[node name="bay1Buttons" type="HBoxContainer" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="bay1Hatch" type="CheckButton" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/bay1Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
button_pressed = true
button_group = ExtResource("1_xekk7")
text = "Hatch Pannel"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/bay1Buttons"]
layout_mode = 2

[node name="bay1Cargo" type="CheckButton" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/bay1Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
button_group = ExtResource("1_xekk7")
text = "Cargo"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="bay2Label" type="Label" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Bay 2 Contents"
horizontal_alignment = 1

[node name="bay2Buttons" type="HBoxContainer" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="bay2Hatch" type="CheckButton" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/bay2Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
button_pressed = true
button_group = ExtResource("2_83sgf")
text = "Hatch Pannel"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/bay2Buttons"]
layout_mode = 2

[node name="bay2Cargo" type="CheckButton" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/bay2Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
button_group = ExtResource("2_83sgf")
text = "Cargo"

[node name="HSeparator3" type="HSeparator" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="bay3Label" type="Label" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Bay 3 Contents"
horizontal_alignment = 1

[node name="bay3Buttons" type="HBoxContainer" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="bay3Hatch" type="CheckButton" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/bay3Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
button_pressed = true
button_group = ExtResource("3_1uoyi")
text = "Hatch Pannel"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/bay3Buttons"]
layout_mode = 2

[node name="bay3Cargo" type="CheckButton" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/bay3Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
button_group = ExtResource("3_1uoyi")
text = "Cargo"

[node name="HSeparator4" type="HSeparator" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Start Game"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2
texture = ExtResource("1_0l8qo")
expand_mode = 5
stretch_mode = 5
flip_h = true

[node name="bay1Left" type="Sprite2D" parent="HBoxContainer/MarginContainer2"]
position = Vector2(750, 326)
scale = Vector2(0.0488281, 0.0488281)
texture = ExtResource("2_5jar2")

[node name="bay2Left" type="Sprite2D" parent="HBoxContainer/MarginContainer2"]
position = Vector2(814, 326)
scale = Vector2(0.0488281, 0.0488281)
texture = ExtResource("2_5jar2")

[node name="bay3Left" type="Sprite2D" parent="HBoxContainer/MarginContainer2"]
position = Vector2(874, 326)
scale = Vector2(0.0488281, 0.0488281)
texture = ExtResource("2_5jar2")

[node name="bay1Right" type="Sprite2D" parent="HBoxContainer/MarginContainer2"]
position = Vector2(750, 441)
scale = Vector2(0.0488281, 0.0488281)
texture = ExtResource("2_5jar2")

[node name="bay2Right" type="Sprite2D" parent="HBoxContainer/MarginContainer2"]
position = Vector2(814, 441)
scale = Vector2(0.0488281, 0.0488281)
texture = ExtResource("2_5jar2")

[node name="bay3Right" type="Sprite2D" parent="HBoxContainer/MarginContainer2"]
position = Vector2(874, 441)
scale = Vector2(0.0488281, 0.0488281)
texture = ExtResource("2_5jar2")

[node name="L1Center" type="Sprite2D" parent="HBoxContainer/MarginContainer2"]
position = Vector2(220, 388)
scale = Vector2(0.322314, 0.322314)
texture = ExtResource("7_1uoyi")

[node name="L1Left" type="Sprite2D" parent="HBoxContainer/MarginContainer2"]
visible = false
position = Vector2(220, 263)
scale = Vector2(0.322314, 0.322314)
texture = ExtResource("7_1uoyi")

[node name="L1Right" type="Sprite2D" parent="HBoxContainer/MarginContainer2"]
visible = false
position = Vector2(220, 503)
scale = Vector2(0.322314, 0.322314)
texture = ExtResource("7_1uoyi")

[node name="L2Right" type="Sprite2D" parent="HBoxContainer/MarginContainer2"]
visible = false
position = Vector2(110, 501)
scale = Vector2(0.322314, 0.322314)
texture = ExtResource("7_1uoyi")

[node name="L2Left" type="Sprite2D" parent="HBoxContainer/MarginContainer2"]
visible = false
position = Vector2(108, 264)
scale = Vector2(0.322314, 0.322314)
texture = ExtResource("7_1uoyi")

[connection signal="pressed" from="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Blue" to="." method="_on_blue_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Red" to="." method="_on_red_pressed"]
[connection signal="item_selected" from="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/StartingOptions" to="." method="_on_starting_options_item_selected"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/bay1Buttons/bay1Hatch" to="." method="_on_bay_1_hatch_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/bay1Buttons/bay1Cargo" to="." method="_on_bay_1_cargo_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/bay2Buttons/bay2Hatch" to="." method="_on_bay_2_hatch_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/bay2Buttons/bay2Cargo" to="." method="_on_bay_2_cargo_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/bay3Buttons/bay3Hatch" to="." method="_on_bay_3_hatch_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/bay3Buttons/bay3Cargo" to="." method="_on_bay_3_cargo_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
